--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "EcommerceApiNodeTs",
+  "name": "ecommerce_api_node_ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "ecommerce",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc -w",
-    "start": "nodemon ./dist/program.js",
-    "debug": "nodemon --debug ./dist/program.js"
+    "compile": "tsc -w -diagnostics",
+    "start": "nodemon ./dist/program.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lucas Martins",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -27,9 +26,6 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/http-status": "^0.2.30",
-    "@types/json2csv": "^4.4.0",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/multer": "^1.3.7",
     "@types/node": "^10.14.6",
     "@types/request": "^2.48.1",
     "nodemon": "^1.19.0",
