--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "3.4.5"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.7.8",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
