--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-status": "^1.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "ts-node": "^8.1.0",
     "typescript": "3.4.5"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.7.8",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/mongoose": "^5.7.8",
     "@types/node": "^10.14.6",
     "@types/request": "^2.48.1",
     "nodemon": "^1.19.0",
