--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ecommerce",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./dist/test/unit/*.js",
     "compile": "tsc -w -diagnostics",
     "start": "nodemon ./dist/program.js"
   },
@@ -19,15 +19,19 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "ts-node": "^8.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "typescript": "3.4.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.2.11",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.8",
     "@types/node": "^10.14.6",
     "@types/request": "^2.48.1",
